# Juyeon-Kim

./: README.md
Django_session/: .gitignore  pyproject.toml
Django_session/accounts/: models.py  serializers.py  urls.py  views.py
Django_session/accounts/migrations/: 0001_initial.py
Django_session/category/: models.py
Django_session/category/migrations/: 0001_initial.py
Django_session/comments/: models.py
Django_session/comments/migrations/: 0001_initial.py
Django_session/config/: middleware.py  permissions.py  settings.py  urls.py
Django_session/postcategory/: admin.py  models.py
Django_session/postcategory/migrations/: 0001_initial.py
Django_session/posts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Django_session/posts/migrations/: 0001_initial.py  0002_post_categories.py
Juyeon-Kim/: README.md
OneDrive/바탕 화면/Likelion14th/django14th/: pyproject.toml
OneDrive/바탕 화면/Likelion14th/django14th/posts/: views.py
django14th/: secrets.json
django14th/config/: settings.py
