[project]
name = "django-session"
version = "0.1.0"
description = ""
authors = [
    {name = "kimjuyeon",email = "stella2810@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "django_session", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
